# nuchat

./: .gitignore  README.md
android/: android_voice_loopback.cpp
ios/: ios_voice_loopback.mm
linux/: alsa_loopback.cpp
macOS/: CMakeLists.txt  vpio_loopback.cpp
win/: wasapi_loopback.cpp
